fix: code's structure and code alignment

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,20 +1,19 @@
 @import "variables";
 @import "animations";
 
-@media(any-hover: hover) {
+@media (any-hover: hover) {
   a:hover {
     color: $red-color;
   }
-
-  .btn:hover, button:hover, .meet-video .play-icon:hover {
+  .btn:hover,
+  button:hover,
+  .meet-video .play-icon:hover {
     animation: horizontal-animation 2.3s linear infinite;
   }
-
   .meet-video .play-icon:hover {
     path {
       fill: $green-color;
     }
-
     & ~ .text {
       opacity: 0;
     }
@@ -27,21 +26,17 @@
   margin: 0;
   padding: 0;
 }
-
 html {
   scroll-behavior: smooth;
 }
-
 html,
 body {
   height: 100%;
   width: 100%;
-
   &.modal-active {
     overflow: hidden;
   }
 }
-
 body {
   display: flex;
   flex-direction: column;
@@ -49,8 +44,7 @@ body {
   background: white;
   font-size: 16px;
   color: #000;
-  font-family: 'Oxygen', sans-serif;
-
+  font-family: "Oxygen", sans-serif;
   &.scroll-top {
     header {
       box-shadow: 5px 0 10px #c7c7c7;
@@ -58,30 +52,27 @@ body {
     }
   }
 }
-
 main {
   flex: 1 0 auto;
   position: relative;
   padding-top: 76px;
 }
-
 section {
   position: relative;
   padding: 10px 0;
 }
-
 a {
   color: $text-color;
   text-decoration: none;
   cursor: pointer;
-  transition: .3s linear;
+  transition: 0.3s linear;
 }
-
-input, select {
-  transition: .3s linear;
+input,
+select {
+  transition: 0.3s linear;
 }
-
-.btn, button {
+.btn,
+button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,46 +86,40 @@ input, select {
   font-size: 18px;
   position: relative;
   background: $green-btn-gradient-mobile;
-  transition: .3s linear;
+  transition: 0.3s linear;
   border-radius: 100px;
 }
-
-a:active, .btn:active, button:active {
-  opacity: .5;
+a:active,
+.btn:active,
+button:active {
+  opacity: 0.5;
 }
-
 img,
 svg,
 iframe,
 video {
   width: 100%;
 }
-
 ul {
   list-style: none;
 }
-
 h2 {
   font-size: 28px;
   color: $text-color;
   font-weight: 700;
   margin-bottom: 20px;
 }
-
 h3 {
   font-weight: 700;
   font-size: 32px;
   color: $text-color;
 }
-
 p {
   color: $text-color;
 }
-
 .footer {
   flex: 0 0 auto;
 }
-
 .container {
   width: 100%;
   max-width: 1280px;
@@ -142,15 +127,12 @@ p {
   margin: 0 auto;
   position: relative;
 }
-
 .red {
   color: $red-color;
 }
-
 .bold {
   font-weight: 700;
 }
-
 .meet-video {
   height: 52vw;
   max-height: 348px;
@@ -161,30 +143,26 @@ p {
   border-radius: 20px;
   overflow: hidden;
   padding: 1px;
-
   #video {
     height: 60vw;
     max-height: 363px;
     width: 100%;
   }
-
-  &.play-video img, &.play-video .play-icon, &.play-video .text {
+  &.play-video img,
+  &.play-video .play-icon,
+  &.play-video .text {
     display: none;
   }
-
   .mejs__container {
     border-radius: 24px;
   }
-
   iframe {
     width: 100%;
     height: 100%;
   }
-
   .mejs__controls {
     display: none;
   }
-
   .on-video {
     width: 100%;
     height: 100%;
@@ -194,7 +172,6 @@ p {
     left: 0;
     z-index: 1;
   }
-
   .play-icon {
     width: 71px;
     height: 71px;
@@ -207,26 +184,22 @@ p {
     cursor: pointer;
     border-radius: 50%;
     background: $blue-btn-gradient;
-    transition: .3s linear;
+    transition: 0.3s linear;
     display: flex;
     align-items: center;
     justify-content: center;
-
     &:active {
-      opacity: .5;
+      opacity: 0.5;
     }
-
     svg {
       width: 29px;
       height: 29px;
     }
-
     path {
       fill: #fff;
-      transition: .3s linear;
+      transition: 0.3s linear;
     }
   }
-
   .text {
     max-width: 94%;
     width: 100%;
@@ -236,32 +209,28 @@ p {
     z-index: 3;
     transform: translateX(-50%);
     text-align: center;
-    transition: .3s linear;
-
+    transition: 0.3s linear;
     p {
       display: inline-block;
       font-size: 12px;
       color: #fff;
       padding: 5px 12px;
       border-radius: 6px;
-      background: rgba(31, 31, 31, .5);
+      background: rgba(31, 31, 31, 0.5);
     }
   }
 }
-
 .comment {
   display: flex;
   align-items: start;
   gap: 0 10px;
   padding: 18px 16px;
-  background: #F6F8F9;
+  background: #f6f8f9;
   border-radius: 20px;
-
   img {
     width: 44px;
     object-fit: contain;
   }
-
   h4 {
     background: $project-gradient;
     -webkit-background-clip: text;
@@ -269,13 +238,12 @@ p {
     font-weight: 700;
     font-size: 14px;
   }
-
   p {
     font-size: 14px;
   }
 }
 
-@media(min-width: 768px) {
+@media (min-width: 768px) {
   h2 {
     font-size: 35px;
   }
@@ -284,14 +252,15 @@ p {
   }
 }
 
-@media(min-width: 1024px) {
+@media (min-width: 1024px) {
   section {
     padding: 30px 0;
   }
   h2 {
     margin-bottom: 20px;
   }
-  .btn, button {
+  .btn,
+  button {
     font-size: 20px;
     background: $blue-btn-gradient;
   }
@@ -300,39 +269,30 @@ p {
     top: 17px;
     right: 21px;
     z-index: 1;
-
     .play-icon {
       width: 80px;
       height: 80px;
     }
-
     .text {
       bottom: 14px;
-
       p {
         font-size: 18px;
         padding: 8px 18px;
       }
     }
   }
-
   .comment {
     border-radius: 24px;
     padding: 24px;
     gap: 0 17px;
-
     img {
       width: 64px;
     }
-
     h4 {
       font-size: 16px;
     }
-
     p {
       font-size: 16px;
     }
   }
 }
-
-
