--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,9 +1,9 @@
 @import "variables";
 
-@media(any-hover: hover) {
+@media (any-hover: hover) {
   .header {
     .logo:hover {
-      opacity: .7;
+      opacity: 0.7;
     }
   }
 }
@@ -17,37 +17,30 @@
   padding: 16px 0;
   font-family: "Source Code Pro", sans-serif;
   background: #fff;
-  transition: .3s linear;
-
+  transition: 0.3s linear;
   .content {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 20px 3%;
   }
-
   ul {
     display: none;
   }
-
   li a {
     font-size: 18px;
   }
-
   .logo {
     cursor: pointer;
-    transition: .3s linear;
+    transition: 0.3s linear;
     display: flex;
-
     &:active {
-      opacity: .5;
+      opacity: 0.5;
     }
-
     img {
       width: 44px;
     }
   }
-
   button {
     padding: 13px clamp(10px, 6%, 21px);
     color: #fff;
@@ -55,19 +48,17 @@
   }
 }
 
-@media(min-width: 1024px) {
+@media (min-width: 1024px) {
   .header {
     .content {
       flex-direction: row;
       justify-content: space-between;
     }
-
     .logo {
       img {
         width: 41px;
       }
     }
-
     ul {
       display: flex;
       align-items: center;
@@ -76,7 +67,6 @@
       gap: 20px;
       padding-right: 2.4%;
     }
-
     li a {
       font-size: 20px;
     }
